--- a/index.html
+++ b/index.html
@@ -3,155 +3,156 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TEST</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdn.pannellum.org/2.4/pannellum.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
-        <style>
-            body {
-                font-family: 'Amatic SC', cursive;
-            }
-        h1 {
-            font-family: 'Amatic SC', cursive;
-        }
-        .show {
-            z-index: 5;
-        }
-        #screen {
-            background-color: white;
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 0;
-        }
-        #panorama {
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            filter: brightness(.7) grayscale(.6) saturate(.6);
-        }
-        #container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            z-index: 5;
-        }
-        #image {
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 2;
-        }
-        #book {
-            z-index: 10;
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            display: none;
-            cursor: pointer;
-        }
-        #orientation {
-            z-index: 10;
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            display: none;
-            cursor: pointer;
-        }
-        #dialog {
-            z-index: 10;
-            position: fixed;
-            top: 0px;
-            left: 0px;
-            width: calc(100vw - 20px);
-            height: 3rem;
-            margin: 10px;
-            line-height: 2rem;
-            background-color: rgba(0, 0, 0, 0.6);
-            display: none;
-            color: white;
-            font-size: 2rem;
-        }
-        #dialog > span {
-            position: relative;
-            top: 0.5rem;
-            left: 1rem;
-        }
-        #FADE {
-            z-index: 200;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100vw;
-            background-color: rgba(0, 0, 0, 1);
-        }
-        .fade-out {
-            display: block;
-            animation-name: ani-fade-out;
-            animation-duration: 1.5s;
-            animation-fill-mode: forwards;
-        }
-        .fade-in {
-            animation-name: ani-fade-in;
-            animation-duration: 1.5s;
-            animation-fill-mode: forwards;
-        }
-        #text-loading {
-            z-index: 201;
-            color: white;
-            font-size: 2rem;
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            animation-name: ani-text-loading;
-            animation-duration: 4s;
-            animation-iteration-count: infinite;
-            display: none;
-        }
-        @keyframes ani-fade-out {
-            from {
-                background-color: rgba(0, 0, 0, 0);
-            }
-            to {
-                background-color: rgba(0, 0, 0, 1);
-            }
-        }
-        @keyframes ani-fade-in {
-            from {
-                background-color: rgba(0, 0, 0, 1);
-            }
-            to {
-                display: none !important;
-                background-color: rgba(0, 0, 0, 0);
-            }
-        }
-        @keyframes ani-text-loading {
-            0% {
-                content: "oooO";
-            }
-            25% {
-                content: "ooOo";
-            }
-            50% {
-                content: "oOoo";
-            }
-            75% {
-                content: "Oooo";
-            }
-            100% {
-                content: "oooO";
-            }
-        }
-        </style>
+        <title>ILLUSION</title>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+            <meta name="apple-mobile-web-app-status-bar-style" content="default">
+                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+                <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap" rel="stylesheet" />
+                <link rel="stylesheet" href="https://cdn.pannellum.org/2.4/pannellum.css" />
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
+                <style>
+                    body {
+                        font-family: 'Amatic SC', cursive;
+                    }
+                h1 {
+                    font-family: 'Amatic SC', cursive;
+                }
+                .show {
+                    z-index: 5;
+                }
+                #screen {
+                    background-color: white;
+                    width: 100%;
+                    height: 100%;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    z-index: 0;
+                }
+                #panorama {
+                    width: 100%;
+                    height: 100%;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    filter: brightness(.7) grayscale(.6) saturate(.6);
+                }
+                #container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100vh;
+                    z-index: 5;
+                }
+                #image {
+                    width: 100%;
+                    height: 100%;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                }
+                #book {
+                    z-index: 10;
+                    position: fixed;
+                    bottom: 10px;
+                    right: 10px;
+                    display: none;
+                    cursor: pointer;
+                }
+                #orientation {
+                    z-index: 10;
+                    position: fixed;
+                    bottom: 10px;
+                    right: 10px;
+                    display: none;
+                    cursor: pointer;
+                }
+                #dialog {
+                    z-index: 10;
+                    position: fixed;
+                    top: 0px;
+                    left: 0px;
+                    width: calc(100vw - 20px);
+                    height: 3rem;
+                    margin: 10px;
+                    line-height: 2rem;
+                    background-color: rgba(0, 0, 0, 0.6);
+                    display: none;
+                    color: white;
+                    font-size: 2rem;
+                }
+                #dialog > span {
+                    position: relative;
+                    top: 0.5rem;
+                    left: 1rem;
+                }
+                #FADE {
+                    z-index: 200;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100vw;
+                    background-color: rgba(0, 0, 0, 1);
+                }
+                .fade-out {
+                    display: block;
+                    animation-name: ani-fade-out;
+                    animation-duration: 1.5s;
+                    animation-fill-mode: forwards;
+                }
+                .fade-in {
+                    animation-name: ani-fade-in;
+                    animation-duration: 1.5s;
+                    animation-fill-mode: forwards;
+                }
+                #text-loading {
+                    z-index: 201;
+                    color: white;
+                    font-size: 2rem;
+                    position: fixed;
+                    bottom: 10px;
+                    right: 10px;
+                    animation-name: ani-text-loading;
+                    animation-duration: 4s;
+                    animation-iteration-count: infinite;
+                }
+                @keyframes ani-fade-out {
+                    from {
+                        background-color: rgba(0, 0, 0, 0);
+                    }
+                    to {
+                        background-color: rgba(0, 0, 0, 1);
+                    }
+                }
+                @keyframes ani-fade-in {
+                    from {
+                        background-color: rgba(0, 0, 0, 1);
+                    }
+                    to {
+                        display: none !important;
+                        background-color: rgba(0, 0, 0, 0);
+                    }
+                }
+                @keyframes ani-text-loading {
+                    0% {
+                        content: "oooO";
+                    }
+                    25% {
+                        content: "ooOo";
+                    }
+                    50% {
+                        content: "oOoo";
+                    }
+                    75% {
+                        content: "Oooo";
+                    }
+                    100% {
+                        content: "oooO";
+                    }
+                }
+                </style>
     </head>
     <body>
         <p id="text-loading"></p>
@@ -174,7 +175,7 @@
         <div id="dialog">
             <span></span>
         </div>
-        <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js" onload="setTimeout(()=>{document.getElementById('start').style.display = ''}, 2000)"></script>
+        <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js" onload="setTimeout(()=>{document.getElementById('text-loading').style.display = 'none';document.getElementById('start').style.display = ''}, 2000)"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8" async></script>
         <script>
             var BOOOOOOOK = 0, orientation = true;
