--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                 </style>
     </head>
     <body>
+        <audio autoplay loop style="display: none;">
+            <source src="res/bgm.mp3" type="audio/mpeg">
+                </audio>
         <p id="text-loading"></p>
         <div id="FADE" class=""></div>
         <img id="image" src="https://i.ytimg.com/vi/AtGTot98UAo/maxresdefault.jpg"></img>
