--- a/index.html
+++ b/index.html
@@ -180,12 +180,22 @@
                     border: 0;
                     z-index: -100;
                 }
+                #hhhhh {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100vw;
+                    height: 100%;
+                    border: 0;
+                    z-index: -100;
+                }
                 </style>
     </head>
     <body>
         <iframe id="rpg1" src="https://pascal-the-elf.github.io/Project-H5/rpg/1/"></iframe>
         <iframe id="rpg2" src="https://pascal-the-elf.github.io/Project-H5/rpg/2/"></iframe>
         <iframe id="rpg3" src="https://pascal-the-elf.github.io/Project-H5/rpg/3/"></iframe>
+        <img src=""></img>
         <audio src="./res/bgm.mp3" autoplay loop style="display: none;"></audio>
         <p id="text-loading"></p>
         <div id="FADE" class=""></div>
@@ -446,7 +456,17 @@
             var ii = setInterval(()=>{
                                  if(document.getElementById("rpg2").contentWindow.$gameVariables._data[6]) {
                                  document.getElementById("rpg2").style.zIndex='-100';
-                                 document.getElementById("rpg3").style.zIndex='100';
+                                 toRPG3();
+                                 clearInterval(ii);
+                                 }
+                                 }, 2000);
+        }
+        function toRPG3() {
+            document.getElementById("rpg3").style.zIndex = 200;
+            var ii = setInterval(()=>{
+                                 if(document.getElementById("rpg3").contentWindow.$gameVariables._data[6]) {
+                                 document.getElementById("rpg3").style.zIndex='-100';
+                                 document.getElementById("hhhhh").style.zIndex="100";
                                  clearInterval(ii);
                                  }
                                  }, 2000);
