--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <iframe id="rpg1" src="https://pascal-the-elf.github.io/Project-H5/rpg/1/"></iframe>
         <iframe id="rpg2" src="https://pascal-the-elf.github.io/Project-H5/rpg/2/"></iframe>
         <iframe id="rpg3" src="https://pascal-the-elf.github.io/Project-H5/rpg/3/"></iframe>
-        <img src=""></img>
+        <img src="https://pascal-the-elf.github.io/Project-H5/rpg/0.jpg"></img>
         <audio src="./res/bgm.mp3" autoplay loop style="display: none;"></audio>
         <p id="text-loading"></p>
         <div id="FADE" class=""></div>
